feat(rest-server): added custom conditions for data in petitions http, models, mongoDB and Mongoose

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 PORT=8080
+
+MONGODB_ATLAS=mongodb+srv://user_node_coffe:bakCrfyvwJvX1arJ@clustercoffe.rjh0f.mongodb.net/coffeDB
+USER=user_node_coffe
+PASS=bakCrfyvwJvX1arJ
